--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,17 +60,19 @@ services:
          - ./otus.configurations/prometheus.yml:/etc/prometheus/prometheus.yml
 
     grafana:
-       image: grafana/grafana:6.5.3
        container_name: grafana
+       image: grafana/grafana:6.5.3
+       networks:
+         - app
        ports:
          - 3000:3000
        depends_on:
          - prometheus
+       environment:
+         - GF_SECURITY_ADMIN_PASSWORD=12345
        volumes:
-         - ./grafana:/var/lib/grafana
-         - ./grafana/provisioning/:/conf/provisioning/
-       env_file:
-         - ./grafana/config.monitoring
+         - ./grafana/provisioning:/etc/grafana/provisioning
+         - ./grafana/dashboards:/var/lib/grafana/dashboards
 
     config:
        container_name: config
