--- a/grafana/provisioning/dashboards/dashboard.yml
+++ b/grafana/provisioning/dashboards/dashboard.yml
@@ -1,11 +1,13 @@
 apiVersion: 1
 
 providers:
-- name: 'Prometheus'
+- name: 'eshop.prometheus'
   orgId: 1
   folder: ''
   type: file
   disableDeletion: false
   editable: true
+#  options:
+#    path: /etc/grafana/provisioning/dashboards
   options:
-    path: /etc/grafana/provisioning/dashboards
+    folder: '/var/lib/grafana/dashboards'
