добавлено протоколирование в расчете на стек ELK

--- a/basket/pom.xml
+++ b/basket/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
         <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
         <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
+        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
     </properties>
 
 
@@ -36,6 +37,11 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- Eureka client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
         <!-- Micormeter core dependecy  -->
         <dependency>
@@ -48,7 +54,13 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.13.0</version>
+            <type>pom</type>
+        </dependency>
 
         <!-- Spring Security OAuth2 and JWT -->
         <dependency>
@@ -104,6 +116,17 @@
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
