--- a/hzServerNode/pom.xml
+++ b/hzServerNode/pom.xml
@@ -49,6 +49,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.13.0</version>
+            <type>pom</type>
+        </dependency>
 
     </dependencies>
 
