--- a/otus.configurations/authentication-dev.yml
+++ b/otus.configurations/authentication-dev.yml
@@ -42,6 +42,10 @@ management:
 server:
   port: 9999
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eurekaserver:8761/eureka/
 
 app:
   jwt:
