--- a/otus.configurations/eurekaserver-dev.yml
+++ b/otus.configurations/eurekaserver-dev.yml
@@ -1,17 +1,26 @@
 spring:
+  main:
+    banner-mode: "off"
   http:
     encoding:
       charset: UTF-8
       enabled: true
       force: true
-  data:
-    mongodb:
-      host: mongodb
-      database: chat
-      port: 27017
+
+  application:
+    name: eurekaserver
 
 server:
-  port: 8088
+  port: 8761
+
+eureka:
+  instance:
+    hostname: eurekaserver
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
 management:
   endpoints:
@@ -21,18 +30,14 @@ management:
   endpoint:
     metrics:
       enabled: true
-    prometheus: enabled
+    prometheus: enabled    
     shutdown:
       enabled: true
   metrics:
     export:
       prometheus:
-        enabled: true
+        enabled: true 
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eurekaserver:8761/eureka/
 
 app:
   jwt:
