--- a/otus.configurations/gateway-dev.yml
+++ b/otus.configurations/gateway-dev.yml
@@ -7,46 +7,32 @@ spring:
       enabled: true
       force: true
   application:
-    name: gaateway
+    name: gateway
 
   cloud:
     gateway:
       routes:
       - id: admin_route
-        uri: http://localhost:8081/microservices/v1/admin
-#        predicates:
-##        - Path=/microservices/v1/admin/**
+        uri: http://admin:8081/microservices/v1/admin
         predicates:
         - Path=/api/v3/admin/**
         filters:
         - RewritePath=/api/v3/admin(?<segment>/?.*), /microservices/v1/admin$\{segment}
 
-
       - id: auth_route
-        uri: http://localhost:9999/oauth/token
+        uri: http://authentication:9999/oauth/token
         predicates:
         - Path=/oauth/token
 
-
       - id: basket_route
-        uri: http://localhost:8083/microservices/v1/basket
-#        predicates:
-#        - Path=/microservices/v1/basket/**
+        uri: http://basket:8083/microservices/v1/basket
         predicates:
         - Path=/api/v3/basket/**
         filters:
         - RewritePath=/api/v3/basket(?<segment>/?.*), /microservices/v1/basket$\{segment}
 
-
-#
-# работающий вариант
-#
-#      - id: catalog_route
-#        uri: http://localhost:8082/microservices/v2/catalog
-#        predicates:
-#        - Path=/microservices/v2/catalog/**
       - id: api_route
-        uri: http://localhost:8082
+        uri: http://catalog:8082
         predicates:
         - Path=/api/v3/catalog/**
         filters:
@@ -54,9 +40,7 @@ spring:
           
 
       - id: cashed_catalog_route
-        uri: http://localhost:8090/microservices/v3/catalog
-#        predicates:
-#        - Path=/microservices/v3/catalog/**
+        uri: http://hzcatalog:8090/microservices/v3/catalog
         predicates:
         - Path=/api/v3/cashed_catalog/**
         filters:
@@ -64,9 +48,7 @@ spring:
 
 
       - id: notification_route
-        uri: http://localhost:8086/microservices/v1/notification
-#        predicates:
-#        - Path=/microservices/v1/notification/**
+        uri: http://notification:8086/microservices/v1/notification
         predicates:
         - Path=/api/v3/notification/**
         filters:
@@ -74,9 +56,7 @@ spring:
 
 
       - id: order_route
-        uri: http://localhost:8084/microservices/v1/order
-#        predicates:
-#        - Path=/microservices/v1/order/**
+        uri: http://order:8084/microservices/v1/order
         predicates:
         - Path=/api/v3/order/**
         filters:
@@ -84,18 +64,14 @@ spring:
 
 
       - id: registration_route
-        uri: http://localhost:8085/microservices/v1/users
-#        predicates:
-#        - Path=/microservices/v1/users/**
+        uri: http://registration:8085/microservices/v1/users
         predicates:
         - Path=/api/v3/users/**
         filters:
         - RewritePath=/api/v3/users(?<segment>/?.*), /microservices/v1/users$\{segment}
 
       - id: websocket_route
-        uri: http://localhost:8085/microservices/v1/chat
-#        predicates:
-#        - Path=/microservices/v1/chat/**
+        uri: http://websocket:8085/microservices/v1/chat
         predicates:
         - Path=/api/v3/chat/**
         filters:
@@ -124,7 +100,7 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eurekaserver:8761/eureka/
 
 
 app:
