--- a/otus.configurations/order-dev.yml
+++ b/otus.configurations/order-dev.yml
@@ -38,6 +38,11 @@ management:
       prometheus:
         enabled: true
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eurekaserver:8761/eureka/
+
 app:
   jwt:
     signingkey: 123
