--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,22 @@
         <module>hzServerNode</module>
         <module>websocket</module>
         <module>notification</module>
+        <module>gateway</module>
+        <module>eurekaserver</module>
     </modules>
 
     <groupId>ru.pavel2107.arch</groupId>
-    <artifactId>HW04</artifactId>
+    <artifactId>eshop</artifactId>
     <version>2.2.1.RELEASE</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
+        <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
+        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+        <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
     </properties>
 
 
